--- a/src/Components/Inscription/Inscription.css
+++ b/src/Components/Inscription/Inscription.css
@@ -1,57 +1,87 @@
-.Inscription{
-    border: 3px solid #1abc9c;
-    width: 60rem;
-    height: 35rem;
+.Inscription {
+    width: 90%;
+    height: 40rem;
     display: flex;
-    flex-direction: row;
-
     align-items: center;
     justify-content: space-evenly;
     margin: 2% auto;
     text-align: center;
-    border-radius: 25px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.15);
-    font-size: 1.3em;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
+    font-size: 1.6em;
+    padding: 20px;
 }
 
-.inscription-title{
-    color: #2c3e50;
-    font-size: 2em;
-    margin-bottom: 1em;
+.inscription-title {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #99DEF0;
 }
 
-.inscription-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+.inscription-title>.Logo {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 10%;
 }
 
-.inscription-form > input{
-    width: 80%;
+.inscription-title>.avatar1,
+.inscription-title>.avatar2 {
+    position: absolute;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.inscription-title>.avatar1 {
+    width: 132px;
+    height: 132px;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+
+.inscription-title>.avatar2 {
+    width: 132px;
+    height: 132px;
+    top: 50%;
+    right: 20%;
+    transform: translate(50%, -50%);
+}
+
+.inscription-form {
+    width: 100%;
+    padding: 20px;
+}
+
+.inscription-form>input {
+    width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 10px 0;
     box-sizing: border-box;
     border: 2px solid #ccc;
-    border-radius: 4px; 
+    border-radius: 4px;
 }
 
-.inscription-form > input[type="submit"]
-{
-    background-color: #4CAF50;
+.inscription-form>input[type="submit"] {
     border: none;
     color: white;
-    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-top: 20px;
     cursor: pointer;
+    border-radius: 12px;
+    background: #130F26;
 }
 
-.inscription-label{
+.inscription-label {
     color: #2c3e50;
     font-size: 1.2em;
     margin-bottom: 0.5em;
+}
+
+.email-error {
+    color: red;
+    font-size: 1em;
+    margin-top: 5px;
 }
