--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -58,3 +58,29 @@
 .container .content {
     padding-left: 75px;
 }
+
+@media screen and (max-width: 575px) {
+    .container {
+        height: 100px;
+        background-color: #ccc;
+        position: relative;
+        bottom: 0;
+    }
+    .container .sidebar {
+        position: fixed;
+        bottom: 0;
+        background: #130F26;
+        height: auto;
+        color: #fff;
+        width: 100%;
+        margin: auto;
+        z-index: 10;
+        text-align: center;
+        box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: row;
+    }
+    .sidebar li span:nth-child(2) {
+        font-size: 5px;
+    }
+}
