--- a/src/Components/Connexion/Connexion.css
+++ b/src/Components/Connexion/Connexion.css
@@ -1,14 +1,13 @@
 .Connexion {
-    border: 3px solid black;
-    width: 60rem;
-    height: 30rem;
+    width: auto;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 3% auto;
     text-align: center;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    gap: 50px;
 }
 
 .Connexion input {
