--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,3 +1,7 @@
+.Container {
+    display: flex;
+}
+
 .Profile {
     margin: 1% auto;
     width: auto;
@@ -5,11 +9,11 @@
     height: auto;
     padding: 0;
     margin-right: 20px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    position: relative;
+    flex: 1;
 }
 
 .Profile-header {
-    border: 1px dotted black;
     width: 100%;
     height: 100px;
     display: flex;
@@ -64,15 +68,11 @@
 
 .Profile-header>p {
     color: #000;
-    /* Body/Body/Bold/L */
-    font-family: Inter;
-    font-size: 18px;
+    font-family: DM Sans;
+    font-size: 36px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 150%;
-    /* 27px */
-    letter-spacing: -0.18px;
-    padding-right: 20px;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .Profile-main {
@@ -83,13 +83,14 @@
 }
 
 .Profile-image {
-    border: 1px dotted black;
-    width: 100%;
+    width: auto;
     height: 15rem;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    padding-left: 30px;
+    gap: 100px;
 }
 
 .avatarUser {
@@ -100,14 +101,64 @@
 }
 
 .form-profile {
-    padding: 10px;
-    margin: 2%;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 5px;
 }
 
-.form-profile>input[type="text"],
+.form-field {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.form-field label {
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+.form-field input {
+    width: auto;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.form-field p.errorMessage {
+    color: red;
+    margin: 0;
+}
+
+.profileEditModeToggle {
+    display: flex;
+    align-items: center;
+}
+
+.profileEditButton,
+.profileEmailbuttonEdit {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.profileEditButton {
+    background-color: #007bff;
+}
+
+.profileEmailbuttonEdit {
+    background-color: #28a745;
+}
+
+.successMessage {
+    color: #28a745;
+    margin: 10px 0;
+}
+
+input[type="text"],
 input[type="email"],
 input[type="tel"] {
     display: flex;
@@ -136,16 +187,16 @@ input[type="tel"] :focus {
 .profileEmailbuttonEdit {
     display: inline-flex;
     width: 144px;
-    padding: 5px 11px;
+    padding: 10px;
+    border-radius: 8px;
     justify-content: center;
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
-    color: #fff;
-    border: none;
     background: #5cb85c;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border: none;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 
@@ -153,6 +204,25 @@ input[type="tel"] :focus {
 
 .image-input {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+#DeleteBtnPhotoProfile {
+    display: inline-flex;
+    padding: 8px 11px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 9px;
+    border: 1px solid #99DEF0;
+    background: rgba(210, 245, 254, 0.00);
+    cursor: pointer;
+    color: #000;
+    font-family: DM Sans;
+    font-size: 20px;
+    font-style: normal;
 }
 
 .image-input input {
