--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     overflow-x: hidden;
     box-sizing: border-box;
-    background-color: #FFFAFA;
+    background-color: #fffafa;
 }
 
 a {
