--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,13 +3,6 @@
     margin: 0;
 }
 
-.container {
-    height: 100vh;
-    background-color: #ccc;
-    position: fixed;
-    top: 0;
-}
-
 .container .sidebar {
     position: fixed;
     background: #130F26;
@@ -20,11 +13,34 @@
     box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.1);
 }
 
+.sidebarNormal {
+    background: #130F26;
+    height: 100vh;
+    color: #fff;
+    width: 207px;
+    text-align: center;
+    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.1);
+}
+
+.sidebarNormal li:nth-child(1) {
+    padding: 30px 0px;
+}
+
 .sidebar li:nth-child(1) {
     padding: 30px 0px;
 }
 
+.sidebarNormal li:nth-child(1) {
+    padding: 30px 0px;
+}
+
 .sidebar li:hover:nth-child(1) {
+    padding: 30px 0px;
+    background-color: transparent;
+    color: #000;
+}
+
+.sidebarNormal li:hover:nth-child(1) {
     padding: 30px 0px;
     background-color: transparent;
     color: #000;
@@ -41,11 +57,30 @@
     gap: 30px;
 }
 
+.sidebarNormal li {
+    padding: 12px;
+    cursor: pointer;
+    transition: all 0.5s;
+    letter-spacing: 1px;
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    gap: 30px;
+}
+
 .sidebar li span:nth-child(1) {
     font-size: 20px;
 }
 
+.sidebarNormal li span:nth-child(1) {
+    font-size: 20px;
+}
+
 .sidebar li span:nth-child(2) {
+    font-size: 20px;
+}
+
+.sidebarNormal li span:nth-child(2) {
     font-size: 20px;
 }
 
